Fixed menu on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,10 +56,6 @@ footer {
 }
 
 .cover_info {
-  /*position: absolute;
-    height: 100%;
-    width: 100%;
-    display: table;*/
   background-color: rgba(35, 186, 237, 0.7);
   color: #fff;
 }
